Handle both forage and application properties files + improve config entries for the catalog